~ refactoring ~ formatted couple of xmls ~ now after login on profile screen user stays on profile screen * profile refreshin on acc swithicng - temporary removed map fragment from DC profile

--- a/trunk/ddscanner/app/src/main/res/layout/view_divecenter_profile.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/view_divecenter_profile.xml
@@ -377,13 +377,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <fragment
-                android:id="@+id/google_map_fragment"
-                class="com.google.android.gms.maps.MapFragment"
-                android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:clickable="false"
-                tools:clickable="false" />
+            <!--See http://stackoverflow.com/questions/14083950/duplicate-id-tag-null-or-parent-id-with-another-fragment-for-com-google-androi-->
+            <!--<fragment-->
+                <!--android:id="@+id/dc_google_map_fragment"-->
+                <!--class="com.google.android.gms.maps.MapFragment"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="150dp"-->
+                <!--android:clickable="false"-->
+                <!--tools:clickable="false" />-->
         </LinearLayout>
     </LinearLayout>
     </LinearLayout>
