--- a/trunk/ddscanner/app/src/main/res/layout/view_diver_sign_up.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/view_diver_sign_up.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/sign_up_view"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#f6f6f6">
+
     <android.support.design.widget.TabLayout
         android:id="@+id/tab_layout"
         style="@style/tabLayout"
@@ -13,125 +13,135 @@
         android:layout_height="45dp"
         android:background="@color/white"
         app:tabMode="fixed" />
+
     <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_below="@+id/tab_layout"
         android:paddingLeft="25dp"
-        android:paddingRight="25dp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    <LinearLayout
-        android:id="@+id/input_area"
-        android:background="@drawable/email_password_background"
-        android:paddingLeft="15dp"
-        android:paddingRight="15dp"
-        android:layout_marginTop="37dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <EditText
-            android:id="@+id/email"
-            android:layout_width="match_parent"
-            android:gravity="center_vertical"
-            android:hint="@string/email_input"
-            android:lines="1"
-            android:inputType="textEmailAddress"
-            android:textColorHint="#a3a3a3"
-            android:textColor="@color/black_text"
-            android:layout_height="55dp"
-            android:background="@android:color/transparent"/>
-        <ImageView style="@style/DividerStyleFull"/>
-        <EditText
-            android:id="@+id/password"
-            android:inputType="textPassword"
-            android:textColorHint="#a3a3a3"
-            android:layout_width="match_parent"
-            android:gravity="center_vertical"
-            android:hint="@string/password"
-            android:textColor="@color/black_text"
-            android:layout_height="55dp"
-            android:lines="1"
-            android:background="@android:color/transparent"/>
-    </LinearLayout>
-    
-    <Button
-        android:id="@+id/btn_sign_up"
-        android:layout_marginTop="15dp"
-        android:layout_below="@+id/input_area"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        style="@style/OrangeButtons"
-        android:text="@string/sign_up_btn"/>
+        android:paddingRight="25dp">
 
-    <TextView
-        android:id="@+id/forgot_password"
-        android:layout_below="@+id/btn_sign_up"
-        android:layout_width="match_parent"
-        android:textColor="#bbbbbb"
-        android:layout_marginTop="16dp"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="@string/forgot_password_btn"/>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_above="@+id/privacy_policy"
-        android:layout_marginBottom="30dp">
-    <LinearLayout
-        android:id="@+id/fb_custom"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@drawable/fb_login_btn_background"
-        android:orientation="horizontal"
-        android:gravity="center">
-        <ImageView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/input_area"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_facebook"/>
-        <TextView
-            android:layout_marginLeft="10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="15sp"
-            android:fontFamily="sans-serif-medium"
-            android:text="@string/sign_in_with_facebook"
-            android:textColor="@color/white"/>
+            android:layout_marginTop="37dp"
+            android:background="@drawable/email_password_background"
+            android:orientation="vertical"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp">
+
+            <EditText
+                android:id="@+id/email"
+                android:layout_width="match_parent"
+                android:layout_height="55dp"
+                android:background="@android:color/transparent"
+                android:gravity="center_vertical"
+                android:hint="@string/email_input"
+                android:inputType="textEmailAddress"
+                android:lines="1"
+                android:textColor="@color/black_text"
+                android:textColorHint="#a3a3a3" />
+
+            <ImageView style="@style/DividerStyleFull" />
+
+            <EditText
+                android:id="@+id/password"
+                android:layout_width="match_parent"
+                android:layout_height="55dp"
+                android:background="@android:color/transparent"
+                android:gravity="center_vertical"
+                android:hint="@string/password"
+                android:inputType="textPassword"
+                android:lines="1"
+                android:textColor="@color/black_text"
+                android:textColorHint="#a3a3a3" />
         </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/custom_google"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_below="@+id/fb_custom"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/google_login_button"
-        android:orientation="horizontal"
-        android:gravity="center">
+        <Button
+            android:id="@+id/btn_login_or_sign_up_via_email"
+            style="@style/OrangeButtons"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_below="@+id/input_area"
+            android:layout_marginTop="15dp"
+            android:text="@string/sign_up_btn" />
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_google"/>
         <TextView
-            android:layout_marginLeft="10dp"
-            android:layout_width="wrap_content"
+            android:id="@+id/forgot_password"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="15sp"
-            android:fontFamily="sans-serif-medium"
-            android:text="@string/sign_in_with_google"
-            android:textColor="@color/white"/>
+            android:layout_below="@+id/btn_login_or_sign_up_via_email"
+            android:layout_marginTop="16dp"
+            android:gravity="center"
+            android:text="@string/forgot_password_btn"
+            android:textColor="#bbbbbb" />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/privacy_policy"
+            android:layout_marginBottom="30dp"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:id="@+id/fb_custom"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:background="@drawable/fb_login_btn_background"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_facebook" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:fontFamily="sans-serif-medium"
+                    android:text="@string/sign_in_with_facebook"
+                    android:textColor="@color/white"
+                    android:textSize="15sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/custom_google"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_below="@+id/fb_custom"
+                android:layout_marginTop="8dp"
+                android:background="@drawable/google_login_button"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_google" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:fontFamily="sans-serif-medium"
+                    android:text="@string/sign_in_with_google"
+                    android:textColor="@color/white"
+                    android:textSize="15sp" />
+
+            </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
-    <TextView
-        android:layout_alignParentBottom="true"
-        android:id="@+id/privacy_policy"
-        android:gravity="center"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="12dp"
-        android:textColor="#a3a3a3"
-        android:text="@string/show_privacy_policy"
-        />
+
+        <TextView
+            android:id="@+id/privacy_policy"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="12dp"
+            android:gravity="center"
+            android:text="@string/show_privacy_policy"
+            android:textColor="#a3a3a3" />
     </RelativeLayout>
 </RelativeLayout>
