--- a/trunk/ddscanner/app/src/main/res/layout/activity_add_language.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_add_language.xml
@@ -22,12 +22,10 @@
         app:pv_progressStyle="@style/CircularProgress" />
 
     <android.support.v7.widget.RecyclerView
+        android:layout_below="@+id/top"
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginTop="10dp"
         android:background="#f6f6f6"
         android:visibility="gone" />
 </RelativeLayout>
