--- a/trunk/ddscanner/app/src/main/res/layout/activity_dive_spot_details.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_dive_spot_details.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -184,7 +185,31 @@
                             android:paddingTop="10dp"
                             android:scaleType="centerCrop"
                             android:src="@drawable/divider" />
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="58dp"
+                            android:background="@color/white"
+                            android:visibility="gone"
+                            app:showWorkingLayoutFrom="@{diveSpotViewModel}">
 
+                            <ImageView
+                                android:id="@+id/ic_layout_working"
+                                android:layout_width="60dp"
+                                android:layout_height="wrap_content"
+                                android:layout_centerVertical="true"
+                                android:src="@drawable/ic_ds_divecenter" />
+                            <android.support.v7.widget.SwitchCompat
+                                android:layout_toRightOf="@+id/ic_layout_working"
+                                android:id="@+id/switchButton"
+                                android:layout_width="match_parent"
+                                android:textSize="15sp"
+                                android:layout_height="match_parent"
+                                android:text="@string/i_am_working_here"
+                                android:fontFamily="sans-serif-medium"
+                                android:paddingRight="13dp"
+                                app:theme="@style/ColorSwitchStyle"
+                                />
+                        </RelativeLayout>
                         <RelativeLayout
                             android:id="@+id/check_in_peoples"
                             android:layout_width="match_parent"
@@ -806,7 +831,8 @@
                 app:layout_anchor="@id/app_bar_layout"
                 app:layout_anchorGravity="bottom|right|end"
                 app:layout_collapseMode="pin"
-                android:onClick="@{handlers::checkInClicked}"/>
+                android:onClick="@{handlers::checkInClicked}"
+                android:visibility="gone" />
 
         </android.support.design.widget.CoordinatorLayout>
     </RelativeLayout>
