--- a/trunk/ddscanner/app/src/main/res/layout/view_divecenter_profile.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/view_divecenter_profile.xml
@@ -379,6 +379,7 @@
             android:textColor="#e3e9fb"
             android:textSize="15sp"
             android:layout_marginBottom="20dp"
+            app:myDiveSpotsCount="@{diveCenterViewModel}"
             />
     </LinearLayout>
 
